add aws config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,18 @@ after_success:
     - docker push akashmane15/multi-nginx 
     - docker push akashmane15/multi-server 
     - docker push akashmane15/multi-worker 
+
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: ap-south-1
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-ap-south-1-748792653956
+    bucker_path: docker-multi
+    on:
+        branch: master
+        access_key_id: $AWS_ACCESS_KEY
+        secret_access_key: $AWS_SECRET_KEY
+      
